App Search adding UI
App Search adding UI features and filtering